--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@types/react": "^16.9.18",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
+    "react-test-renderer": "^16.12.0",
     "typesafe-actions": "^5.1.0",
     "typescript": "^3.7.5"
   },
@@ -41,6 +44,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.9.0",
+    "@types/react-test-renderer": "^16.9.1",
     "ts-jest": "^24.3.0"
   }
 }
