--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^16.9.18",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.6",
+    "@types/redux-mock-store": "^1.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "react": "^16.12.0",
@@ -17,6 +18,7 @@
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
     "react-test-renderer": "^16.12.0",
+    "redux-mock-store": "^1.5.4",
     "typesafe-actions": "^5.1.0",
     "typescript": "^3.7.5"
   },
